# ForestFireSim25

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ForestFireSim.sln  ForestFireSim.vcxproj  ForestFireSim.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters
algorithms/: ISpreadModel.hpp  Rothermel.cpp  Rothermel.h  spreadModel_1.hpp
config/: fileroutes.hpp
include/: Surface.hpp
libs/glad/include/glad/: glad.h
shaders/: fragment_shader.glsl
src/: Cell.cpp  Cell.h  Grid.cpp  Grid.hpp  Surface.cpp  Surface.h  fragment_shader.glsl  glad.c  main.cpp  vertex_shader.glsl
src/config/: ScreenConfig.hpp
